Implementando las sesiones

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -42,13 +42,13 @@
                 <i class="fas fa-key icon"></i>
             </div>
             <span class="error" id="errorPassword"></span>
-            <button type="submit" value="Enviar" id="botonEnviar" class="button">Crear cuenta</button>
-
             <div class="Terminos">
                 <p>
-                    <input type="checkbox" name="condiciones" style="color:black;padding-left:20px;" required>Debes aceptar los <a style="color:blue;" href="/terminosYcondiciones"> Términos y Condiciones</a> para poder registarte</p>
+                    <input type="checkbox" name="condiciones" style="color:black;padding-left:20px;" required>Debes aceptar nuestros <a style="color:blue;" href="/terminosYcondiciones"> Términos y Condiciones</a> para poder registrarte.</p>
                 </p>
             </div>
+            <button type="submit" value="Enviar" id="botonEnviar" class="button">Crear cuenta</button>
+            
             <p>¿Ya tienes una cuenta?<a class="link" href="/login">Iniciar Sesion</a></p>
         </div>
     </form>
