nombre de usuario

--- a/templates/index.html
+++ b/templates/index.html
@@ -168,7 +168,7 @@
                     <p class="precio">
                         <span>$99.00 /</span> por noche
                     </p>
-                    <button type="button" class="btn" onclick="location.href='/login';">Reserva ahora</button>
+                    <button type="button" class="btn" onclick="location.href='/reserva';">Reserva ahora</button>
                 </div>
             </article>
             <!--fin primera habitacion-->
@@ -199,7 +199,7 @@
                     <p class="precio">
                         <span>$99.00 /</span> por noche
                     </p>
-                    <button type="button" class="btn" onclick="location.href='/login';">Reserva ahora </button>
+                    <button type="button" class="btn" onclick="location.href='/reserva';">Reserva ahora </button>
                 </div>
             </article>
             <!--fin segunda habitacion-->
@@ -230,7 +230,7 @@
                     <p class="precio">
                         <span>$99.00 /</span> por noche
                     </p>
-                    <button type="button" class="btn" onclick="location.href='/login';">Reserva ahora </button>
+                    <button type="button" class="btn" onclick="location.href='/reserva';">Reserva ahora </button>
                 </div>
             </article>
             <!--fin tercera habitacion-->
