--- a/templates/reservas.html
+++ b/templates/reservas.html
@@ -15,8 +15,45 @@
 </head>
 
 <body>
+    <!--Cabecera, se le agrega la clase para su identificacion en el css-->
+    <header class="cabecera" id="cabecera">
+        <div class="cabecera-superior">
+            <div class="nombre-sitio">
+                <span> Equipo 1 Grupo 54</span>
+                <p><a class="link" href="/micuenta">Mi usuario</a></p>
+                <p><a href="{{url_for('main.logout')}}">Salir</a></p>
+
+            </div>
+            <div class="navegacion-sitio">
+                <span id="navegacion-btn">Menu <i class="fas fa-bars"></i></span>
+            </div>
+        </div>
+        <div class="cabecera-boton flex">
+            <h2>Hotel Shangri-la Dubai</h2>
+        </div>
+    </header>
+    <!--Fin de la cabecera-->
+
+    <!--Barra de navegabilidad-->
+    <div class="menu" id="menu">
+        <span class="btn-cancelar" id="btn-cancelar">
+            <i class="fas fa-times"></i>
+        </span>
+        <ul class="barra-menu">
+
+            <li> <a href="#cabecera">Inicio</a></li>
+            <li> <a href="#servicios">Servicios</a></li>
+            <li> <a href="#habitaciones">Habitaciones</a></li>
+            <li> <a href="#comentarios">Comentarios</a></li>
+        </ul>
+        <button class="btn sign-up" onclick="location.href='/registro';">Registrarse</button>
+        <button class="btn log-in" onclick="location.href='/login';">Iniciar sesion</button>
+    </div>
+    <!--Fin de la barra de navegabilidad-->
+
+
     <!--Reservas-->
-    
+
     <div class="reserva">
         <form class="form-reserva">
             <div class="form-datos">
@@ -40,7 +77,7 @@
                 <input type="number" min="1" value="1" id="rooms">
             </div>
             <div class="form-datos">
-                <button type="button" class="btn" onclick="location.href='/login';">reserva ahora</button>
+                <button type="button" class="btn" onclick="{{url_for('main.micuenta')}}">reserva ahora</button>
             </div>
         </form>
     </div>
