--- a/templates/listaDeClientes.html
+++ b/templates/listaDeClientes.html
@@ -22,7 +22,7 @@
 			<div class="full-box dashboard-sideBar-UserInfo">
 				<figure class="full-box">
 					<img src="/static/img/avatars/AdminMaleAvatar.png" alt="UserIcon">
-					<figcaption class="text-center text-titles">Super Administrador</figcaption>
+					<figcaption class="text-center text-titles">{{session['nombre']}}</figcaption>
 				</figure>
 				<ul class="full-box list-unstyled text-center">
 					<li>
