--- a/static/css/estilo.css
+++ b/static/css/estilo.css
@@ -91,7 +91,7 @@ img {
 }
 
 .cabecera1 {
-    background-color:#88abec;
+    background-color:#0e0e0c85;
     display: flex;
     flex-direction: column;
     align-content: stretch;
