--- a/templates/reservas.html
+++ b/templates/reservas.html
@@ -18,10 +18,8 @@
     <!--Cabecera, se le agrega la clase para su identificacion en el css-->
     <header class="cabecera1" id="cabecera">
         <div class="cabecera-superior">
-            <div class="nombre-sitio">
-                <span> Equipo 1 Grupo 54</span>
-                <p><a class="link" href="/micuenta">Mi usuario</a></p>
-                <p><a href="{{url_for('main.logout')}}">Salir</a></p>
+            <div class="cabecera-boton flex">
+                <h2>Hotel Shangri-la Dubai</h2>
             </div>
             <div class="navegacion-sitio">
                 <span id="navegacion-btn">Menu <i class="fas fa-bars"></i></span>
@@ -34,15 +32,12 @@
 
     <!--Barra de navegabilidad-->
     <div class="menu" id="menu">
-        <span class="btn-cancelar" id="btn-cancelar">
-            <i class="fas fa-times"></i>
-        </span>
-        <ul class="barra-menu">
 
-            <li> <a href="#cabecera">Inicio</a></li>
-            <li> <a href="#servicios">Servicios</a></li>
-            <li> <a href="#habitaciones">Habitaciones</a></li>
-            <li> <a href="#comentarios">Comentarios</a></li>
+        <ul class="barra-menu">
+            <li> <a class="link" href="/">Inicio</a></li>
+            <li> <a class="link" href="/#servicios">Servicios</a></li>
+            <li> <a class="link" href="/#habitaciones">Habitaciones</a></li>
+            <li> <a class="link" href="/#comentarios">Comentarios</a></li>
         </ul>
     </div>
     <!--Fin de la barra de navegabilidad-->
