--- a/templates/politicasdeprivacidad.html
+++ b/templates/politicasdeprivacidad.html
@@ -78,6 +78,7 @@
                 consentimiento, salvo que sea requerido por un juez con un orden judicial.</p>
             <p style="text-align: justify;">Shangri-La Dubai Se reserva el derecho de cambiar los términos de la presente Política de Privacidad
                 en cualquier momento.</p>
+                <h2 style="text-align:center;"><a class="link" href="/registro">Registrarse</a></h2>
         </div>
     </form>
 </body>
