--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
             <h2>Hotel Shangri-la Dubai</h2>
             <h3>Calidad y Excelencia</h3>
             <p>Convierta sus vacaciones en una experiencia inolvidable.</p>
-            <button type="button" class="btn-cabecera">Empezar</button>
+            <button type="button" class="btn-cabecera" onclick="location.href='#servicios';">Empezar</button>
         </div>
     </header>
     <!--Fin de la cabecera-->
