--- a/templates/login.html
+++ b/templates/login.html
@@ -2,30 +2,28 @@
 <html lang="es">
 
 <head>
-    <meta name="viewport"
-        content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=3.0, minimum-scale=1.0">
+    <meta name="viewport"content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=3.0, minimum-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-    <script src="{{ url_for('static', filename='js/validations.js') }}"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/misEstilos.css') }}" />
     <meta charset="UTF-8" />
 </head>
 
 
 <body>
-    <form class="formulario" onsubmit="return validar();" method="POST">
+    <form class="formulario" method="POST">
         
         <h1>Inicio de sesión</h1>
         
         <div class="contenedor">
             
             <div class="input-contenedor">
-                <input type="text" name="username" id="username" placeholder="Usuario"/>
+                <input type="text" name="usuario" id="usuario" placeholder="Usuario"/>
                 <i class="fas fa-user icon"></i>
             </div>
             <span class="error" id="errorUsername"></span>
             
             <div class="input-contenedor">
-                <input type="password" name="userPassword" placeholder="Contraseña">
+                <input type="password" name="password" placeholder="Contraseña">
                 <i class="fas fa-key icon"></i>
             </div>
             <span class="error" id="errorPassword"></span>
@@ -34,10 +32,8 @@
 
             <div>
                 {% for mensaje in get_flashed_messages() %}
-
                 <div class="error">{{ mensaje }}</div>
                 {% endfor %}
-                {% block contenido %} {% endblock %}
             </div>
             
 
