validaciones a la contraseña

--- a/templates/micuenta.html
+++ b/templates/micuenta.html
@@ -93,9 +93,11 @@
 					<a href="#!" class="btn-menu-dashboard"><i class="zmdi zmdi-more-vert"></i></a>
 				</li>
 				<li>
+					{% if session['rol'] == 'superadministrador'%}
 					<a href="/search" class="btn-search">
 						<i class="zmdi zmdi-search"></i>
 					</a>
+					{% endif %}
 				</li>
 			</ul>
 		</nav>
