--- a/templates/registro.html
+++ b/templates/registro.html
@@ -24,8 +24,8 @@
                         <i class="fas fa-user icon"></i>
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                     </div>
-                    <p class="formulario__input-error">El Nombre tiene que ser de 4 a 16 dígitos y solo puede contener
-                        numeros, letras y guion bajo.</p>
+                    <p class="formulario__input-error">El Nombre tiene que ser de 4 a 16 dígitos y no puede contener
+                        numeros ni caracteres especiales.</p>
                 </div>
 
                 <!-- Grupo: Apellido -->
@@ -67,7 +67,7 @@
                         <i class="fas fa-key icon"></i>
                         <i class="formulario__validacion-estado fas fa-times-circle"></i>
                     </div>
-                    <p class="formulario__input-error">La contraseña tiene que ser de 4 a 12 dígitos.</p>
+                    <p class="formulario__input-error"> La contraseña debe tener como minimo 8 caracteres, maximo 40. Al menos una letra mayúscula, una letra minucula, un número y no debe contener espacios en blanco</p>
                 </div>
 
                 <!-- Grupo: Contraseña 2 -->
