--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,7 @@
 
             <div>
                 {% for mensaje in get_flashed_messages() %}
-                <div class="error">{{ mensaje }}</div>
+                <div class="error" style="color: brown; text-align: center;" ><b>{{ mensaje }}</b></div>
                 {% endfor %}
             </div>
             
