--- a/templates/NuevaHabitacion.html
+++ b/templates/NuevaHabitacion.html
@@ -114,7 +114,7 @@
 					<h3 class="panel-title"><i class="zmdi zmdi-plus"></i> &nbsp; NUEVA HABITACION</h3>
 				</div>
 				<div class="panel-body">
-					<form>
+					<form method="POST">
 						<fieldset>
 							<legend><i class="zmdi zmdi-library"></i> &nbsp; Información básica</legend>
 							<div class="container-fluid">
@@ -122,15 +122,13 @@
 									<div class="col-xs-12 col-sm-6">
 										<div class="form-group label-floating">
 											<label class="control-label">Código de la Habitación *</label>
-											<input pattern="[a-zA-Z0-9-]{1,30}" class="form-control" type="text"
-												name="codigo-reg" required="" maxlength="30">
+											<input pattern="[a-zA-Z0-9-]{1,30}" class="form-control" type="text" name="codigoHabitacion" id="codigoHabitacion" required="" maxlength="30">
 										</div>
 									</div>
 									<div class="col-xs-12 col-sm-6">
 										<div class="form-group label-floating">
 											<label class="control-label">Piso *</label>
-											<input pattern="[a-zA-Z0-9áéíóúÁÉÍÓÚñÑ ]{1,30}" class="form-control"
-												type="text" name="titulo-reg" required="" maxlength="30">
+											<input pattern="[a-zA-Z0-9áéíóúÁÉÍÓÚñÑ ]{1,30}" class="form-control" type="text" name="numPiso"  id="numPiso" required="" maxlength="30">
 										</div>
 									</div>
 								</div>
@@ -143,8 +141,7 @@
 									<div class="col-xs-12 col-sm-6">
 										<div class="form-group label-floating">
 											<label class="control-label">Precio</label>
-											<input pattern="[0-9.]{1,7}" class="form-control" type="text"
-												name="precio-reg" maxlength="7">
+											<input pattern="[0-9.]{1,7}" class="form-control" type="text" name="precio" id="precio" maxlength="7">
 										</div>
 									</div>
 								</div>
